FloatingActions: fix for button width
[Issue] https://github.com/Samsung/TAU/issues/348
[Problem] Floating Button is too wide
[Solution] css selectors have been changed to more specific ones

--- a/src/css/profile/mobile/changeable/common/floatingactions.less
+++ b/src/css/profile/mobile/changeable/common/floatingactions.less
@@ -21,6 +21,9 @@
 		height: 120 * @unit_base;
 		margin: 0;
 		background-color: transparent;
+		&.ui-btn-icon {
+			width: 120 * @unit_base;
+		}
 
 		.LESSui-btn-nobg();
 
